<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar_save" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/nature_blur"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <com.hikearmenia.ui.widgets.EditText
                android:id="@+id/old_pass"
                style="@style/thin_font"
                android:layout_width="@dimen/auth_box_width"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/edittext_modified_states"
                android:hint="@string/old_pass"
                android:inputType="textPassword"
                android:textSize="18sp" />

            <com.hikearmenia.ui.widgets.EditText
                android:id="@+id/new_pass"
                style="@style/thin_font"
                android:layout_width="@dimen/auth_box_width"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/edittext_modified_states"
                android:hint="@string/new_pass"
                android:inputType="textPassword"
                android:textSize="18sp" />

            <com.hikearmenia.ui.widgets.EditText
                android:id="@+id/confirm_pas"
                style="@style/thin_font"
                android:layout_width="@dimen/auth_box_width"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/edittext_modified_states"
                android:hint="@string/confirm_pass"
                android:inputType="textPassword"
                android:textSize="18sp" />


            <com.hikearmenia.ui.widgets.Button
                android:id="@+id/save_btn"
                style="@style/light_font"
                android:layout_width="@dimen/auth_box_width"
                android:layout_height="@dimen/auth_buttons_height"
                android:layout_below="@+id/login_view_forgot"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/login_button_margin_top"
                android:background="@drawable/green_button"
                android:cropToPadding="true"
                android:enabled="true"
                android:text="@string/save"
                android:textSize="@dimen/auth_uni_text_size_large" />


        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
