<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/green_menu">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/root_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/nature_blur"
            android:scaleType="centerCrop" />

        <!--<android.support.design.widget.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:background="@android:color/transparent"-->
        <!--app:elevation="0dp">-->

        <!--<include layout="@layout/main_toolbar" />-->
        <!--</android.support.design.widget.AppBarLayout>-->


        <ScrollView
            android:id="@+id/scroll_view_logIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fitsSystemWindows="true">

            <LinearLayout
                android:id="@+id/conteiner_login_views"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/login_view_logo"
                    android:layout_width="@dimen/auth_uni_pic_width"
                    android:layout_height="@dimen/auth_uni_pic_height"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/login_view_page_content_description"
                    android:src="@drawable/logo" />

                <com.hikearmenia.ui.widgets.EditText
                    android:id="@+id/login_view_email_input"
                    style="@style/thin_font"
                    android:layout_width="@dimen/auth_box_width"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/login_view_password"
                    android:layout_alignStart="@+id/login_view_password"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/edittext_modified_states"
                    android:gravity="bottom"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/auth_uni_hint_text_size"
                    android:textStyle="bold" />

                <com.hikearmenia.ui.widgets.EditText
                    android:id="@+id/login_view_password"
                    style="@style/thin_font"
                    android:layout_width="@dimen/auth_box_width"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/edittext_modified_states"
                    android:gravity="bottom"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:textSize="@dimen/auth_uni_hint_text_size"
                    android:textStyle="bold" />

                <com.hikearmenia.ui.widgets.TextView
                    android:id="@+id/login_view_forgot"
                    style="@style/regular_font"
                    android:layout_width="@dimen/auth_box_width"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"

                    android:clickable="true"
                    android:fontFamily="SFUIDisplay-Medium"
                    android:text="@string/login_view_forgot_password_text"
                    android:textColor="@color/auth_view_texts_color"
                    android:textSize="@dimen/auth_uni_text_size_small"
                    android:textStyle="bold" />

                <com.hikearmenia.ui.widgets.Button
                    android:id="@+id/login_button"
                    style="@style/light_font"
                    android:layout_width="@dimen/auth_box_width"
                    android:layout_height="@dimen/auth_buttons_height"
                    android:layout_below="@+id/login_view_forgot"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/login_button_margin_top"
                    android:background="@drawable/green_button"
                    android:cropToPadding="true"
                    android:enabled="true"
                    android:text="@string/login_button_text"
                    android:textSize="@dimen/auth_uni_text_size_large" />

                <com.hikearmenia.ui.widgets.TextView
                    android:id="@+id/login_view_sign_up_suggestion"
                    style="@style/bold_font"
                    android:layout_width="@dimen/auth_box_width"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_button"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="18dp"
                    android:clickable="true"
                    android:text="@string/login_view_sign_up_suggestion_text"
                    android:textColor="@color/auth_view_texts_color"
                    android:textSize="@dimen/auth_uni_text_size_small"
                    android:textStyle="bold" />


            </LinearLayout>
        </ScrollView>


        <com.hikearmenia.ui.widgets.Button
            android:id="@+id/login_view_facebook_button"
            style="@style/light_font"
            android:layout_width="match_parent"
            android:layout_height="@dimen/auth_uni_bottom_button_height"
            android:layout_alignParentBottom="true"
            android:layout_gravity="end|bottom"
            android:background="@drawable/blue_button"
            android:text="@string/login_view_facebook_button_text"
            android:textAllCaps="false"
            android:textSize="@dimen/auth_uni_text_size_large" />


    </android.support.design.widget.CoordinatorLayout>

    <LinearLayout
        android:id="@+id/nav_view"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:orientation="vertical" />
</android.support.v4.widget.DrawerLayout>