<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/nature_blur"
        android:scaleType="centerCrop" />

    <include layout="@layout/toolbar_view" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:background="@android:color/transparent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <com.hikearmenia.ui.widgets.TextView
                android:id="@+id/profile_view_edit_account"
                style="@style/ultralight_font"
                android:layout_width="@dimen/auth_box_width"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/password_rec_view_email"
                android:layout_alignStart="@+id/password_rec_view_email"
                android:layout_marginBottom="100dp"
                android:gravity="center_horizontal"
                android:text="@string/password_rec_view_suggestion"
                android:textColor="@android:color/white"
                android:textSize="@dimen/pass_rec_text" />

            <com.hikearmenia.ui.widgets.EditText
                android:id="@+id/password_rec_view_email"
                style="@style/thin_font"
                android:layout_width="@dimen/auth_box_width"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/edittext_modified_states"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/auth_uni_hint_text_size" />


            <com.hikearmenia.ui.widgets.Button
                android:id="@+id/password_rec_view_recover_button"
                style="@style/light_font"
                android:layout_width="@dimen/auth_box_width"
                android:layout_height="@dimen/auth_buttons_height"
                android:layout_alignStart="@+id/password_rec_view_email"
                android:layout_below="@+id/password_rec_view_email"
                android:layout_marginTop="50dp"
                android:background="@drawable/green_button"
                android:cropToPadding="true"
                android:text="@string/password_rec_view_rec_button_text"
                android:textSize="@dimen/auth_uni_text_size_large" />
        </LinearLayout>


    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>